<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bienvenue_sur_la_page_d_inscription"
            android:layout_marginTop="30dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="30sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_register"
            android:textStyle="bold|italic"
            android:textAlignment="center"
            android:layout_marginTop="70dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/new_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/entrez_votre_login"
            android:inputType="textEmailAddress"
            android:autofillHints="@string/entrez_votre_login" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_password"
            android:textStyle="bold|italic"
            android:textAlignment="center"
            android:layout_marginTop="30dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/entrez_votre_password_page"
            android:inputType="textPassword"
            android:autofillHints="@string/entrez_votre_password" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_height="match_parent"
            android:layout_width="match_parent">

            <Button
                android:id="@+id/valider_button"
                android:layout_width="426dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:text="@string/valider"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:background="#8BC34A"
                android:backgroundTint="#8BC34A"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />


        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>