<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".presentation.main.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="10dp">

        <TextView
            android:id="@+id/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/connectez_vous"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:text="@string/login"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/entrez_votre_login"
            android:hint="@string/entrez_votre_login"
            android:inputType="textEmailAddress" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/password"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/entrez_votre_password"
            android:hint="@string/entrez_votre_password"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"


            android:orientation="vertical">

            <Button
                android:id="@+id/login_button"
                android:layout_width="385dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="#8BC34A"
                android:backgroundTint="#8BC34A"
                android:bufferType="normal"
                android:text="@string/se_connecter"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <Button
                android:id="@+id/create_account_button"
                android:layout_width="385dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="#FFFFFF"
                android:backgroundTint="#FFFFFF"
                android:bufferType="normal"
                android:foregroundTint="#FFFFFF"
                android:text="@string/s_inscrire"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#3F51B5"
                android:textSize="18sp" />


        </LinearLayout>

    </LinearLayout>
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/background"
        />


</androidx.constraintlayout.widget.ConstraintLayout>